functions implementation and code refractor.
