# pkg/models/address.go
@@ -26,6 +26,19 @@ type Address struct {
 	Status           string    `gorm:"column:status"`
 }
 
+type AddressWithListID struct {
+	AddressId        string    `gorm:"column:address_id"`
+	AddressListId    string    `gorm:"column:address_list_id"`
+	Address          string    `gorm:"column:address"`
+	Remarks          string    `gorm:"column:remarks"`
+	VerificationCode string    `gorm:"column:verification_code"`
+	CreateTime       time.Time `gorm:"column:create_time"`
+	VerifyTime       time.Time `gorm:"column:verify_time"`
+	StatusTime       time.Time `gorm:"column:status_time"`
+	NotifyType       string    `gorm:"column:notify_type"`
+	Status           string    `gorm:"column:status"`
+}
+
 const (
 	AddressIdPrefix = "addr-"
 )
@@ -73,7 +86,6 @@ func NewAddress(req *pb.CreateAddressRequest) *Address {
 func AddressToPb(address *Address) *pb.Address {
 	pbAddress := pb.Address{}
 	pbAddress.AddressId = pbutil.ToProtoString(address.AddressId)
-	pbAddress.AddressListId = pbutil.ToProtoString(address.AddressListId)
 	pbAddress.Address = pbutil.ToProtoString(address.Address)
 	pbAddress.Remarks = pbutil.ToProtoString(address.Remarks)
 	pbAddress.VerificationCode = pbutil.ToProtoString(address.VerificationCode)
@@ -92,4 +104,28 @@ func ParseAddressSet2PbSet(inAddrs []*Address) []*pb.Address {
 		pbAddrs = append(pbAddrs, pbAddr)
 	}
 	return pbAddrs
+}
+
+func ParseAddressWithListIDSet2PbSet(inAddrs []*AddressWithListID) []*pb.Address {
+	var pbAddrs []*pb.Address
+	for _, inAddr := range inAddrs {
+		pbAddr := AddressWithListIDToPb(inAddr)
+		pbAddrs = append(pbAddrs, pbAddr)
+	}
+	return pbAddrs
+}
+
+func AddressWithListIDToPb(address *AddressWithListID) *pb.Address {
+	pbAddress := pb.Address{}
+	pbAddress.AddressId = pbutil.ToProtoString(address.AddressId)
+	pbAddress.AddressListId = pbutil.ToProtoString(address.AddressListId)
+	pbAddress.Address = pbutil.ToProtoString(address.Address)
+	pbAddress.Remarks = pbutil.ToProtoString(address.Remarks)
+	pbAddress.VerificationCode = pbutil.ToProtoString(address.VerificationCode)
+	pbAddress.Status = pbutil.ToProtoString(address.Status)
+	pbAddress.CreateTime = pbutil.ToProtoTimestamp(address.CreateTime)
+	pbAddress.VerifyTime = pbutil.ToProtoTimestamp(address.VerifyTime)
+	pbAddress.StatusTime = pbutil.ToProtoTimestamp(address.StatusTime)
+	pbAddress.NotifyType = pbutil.ToProtoString(address.NotifyType)
+	return &pbAddress
 }
